compiler/tests/fixtures/invalid/semantics/action_missing_roles.viv
// Action with no roles — should be rejected

action roleless:
    gloss: "something happens"
    importance: 5
